{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 11,
  "lineage": "7c4187f1-ba92-597d-5b9d-007cae653ca9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374026300155:internet-gateway/igw-0736bb8d901f7d44e",
            "id": "igw-0736bb8d901f7d44e",
            "owner_id": "374026300155",
            "tags": {
              "Name": "siri-aws-igw"
            },
            "tags_all": {
              "Name": "siri-aws-igw"
            },
            "vpc_id": "vpc-08d51c56fd4f0ed94"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374026300155:route-table/rtb-0a3a89b2ff65ce3ea",
            "id": "rtb-0a3a89b2ff65ce3ea",
            "owner_id": "374026300155",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0736bb8d901f7d44e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "siri_Main_table-testing"
            },
            "tags_all": {
              "Name": "siri_Main_table-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d51c56fd4f0ed94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0020f98cd14f11d57",
            "route_table_id": "rtb-0a3a89b2ff65ce3ea",
            "subnet_id": "subnet-067a3e54993cbcb86"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085b5a8b342b3d9aa",
            "route_table_id": "rtb-0a3a89b2ff65ce3ea",
            "subnet_id": "subnet-096868fb65cd8f3c1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet2-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b189c5061d92b6c",
            "route_table_id": "rtb-0a3a89b2ff65ce3ea",
            "subnet_id": "subnet-0bb2febce7bfcc93f"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet3-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374026300155:security-group/sg-077cb60453843a30b",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077cb60453843a30b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sirisg",
            "name_prefix": "",
            "owner_id": "374026300155",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d51c56fd4f0ed94"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374026300155:subnet/subnet-067a3e54993cbcb86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067a3e54993cbcb86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374026300155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "siri_Public_Subnet1-testing"
            },
            "tags_all": {
              "Name": "siri_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-08d51c56fd4f0ed94"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374026300155:subnet/subnet-096868fb65cd8f3c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096868fb65cd8f3c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374026300155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "siri_Public_Subnet2-testing"
            },
            "tags_all": {
              "Name": "siri_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-08d51c56fd4f0ed94"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374026300155:subnet/subnet-0bb2febce7bfcc93f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb2febce7bfcc93f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374026300155",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "siri_Public_Subnet3-testing"
            },
            "tags_all": {
              "Name": "siri_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-08d51c56fd4f0ed94"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374026300155:vpc/vpc-08d51c56fd4f0ed94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03ad3796ef216c39b",
            "default_route_table_id": "rtb-0535c48985af35da3",
            "default_security_group_id": "sg-0f4c317d5635ad25f",
            "dhcp_options_id": "dopt-00c3b77ed1573360d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08d51c56fd4f0ed94",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0535c48985af35da3",
            "owner_id": "374026300155",
            "tags": {
              "Name": "siri-aws-testing",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "siri-aws-testing",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}